--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
     image: ${IMAGE_NAME:-mcano/io-extended}
     command: python app.py
     environment:
-      REDIS_HOST: redis
+      - REDIS_HOST=redis
+      - DOCKER_SERVICE_NAME={{.Service.Name}}.{{.Task.Slot}}
     ports:
       - target: 5000
         published: 5000
@@ -13,14 +14,31 @@ services:
     deploy:
       replicas: ${DEPLOYMENT_REPLICAS:-4}
       restart_policy:
+        # restart under any condition
         condition: any
       update_config:
+        # update one task at a time
         parallelism: 1
+        # update after 10s passed
         delay: 10s
+        # spin up a new container
         order: start-first
+      resources:
+        # hard limits
+        limits:
+          # 50% of CPU time
+          cpus: '0.50'
+          # up to 200 MB
+          memory: 200M
+        # at least reserve this resources
+        reservations:
+          cpus: '0.25'
+          memory: 10M
 
   redis:
     image: "redis:alpine"
+    deploy:
+      replicas: 1
     networks:
       skynet:
 
