--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,14 @@ services:
     environment:
       - REDIS_HOST=redis
       - DOCKER_SERVICE_NAME={{.Service.Name}}.{{.Task.Slot}}
+      - FOO=${FOO:-BAR}
     ports:
       - target: 5000
         published: 5000
     networks:
       - skynet
     deploy:
-      replicas: ${DEPLOYMENT_REPLICAS:-4}
+      replicas: ${DEPLOYMENT_REPLICAS:-3}
       restart_policy:
         # restart under any condition
         condition: any
