--- a/docker-compose.rolling.yml
+++ b/docker-compose.rolling.yml
@@ -19,9 +19,9 @@ services:
       update_config:
         # update one task at a time
         parallelism: 1
-        # update after 10s passed
+        # update after 10s passed and container is healthy
         delay: 10s
-        # spin up a new container
+        # spin up a new container first
         order: start-first
 
   redis:
