@jmarcos-cano - no image and change name to pretty-whoami

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ jobs:
       script:
       - docker --version
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+      - cp .env.example .env
       - docker-compose -f docker-compose.yml -f docker-compose-build.yml build
       - docker images
       - docker-compose -f docker-compose.yml -f docker-compose-build.yml push
