--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -4,11 +4,20 @@ on: [push]
 
 jobs:
 
-  build:
+    build:
 
-    runs-on: ubuntu-latest
+        runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v1
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        steps:
+        - uses: actions/checkout@v1
+        - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+
+
+    test:
+        runs-on: ubunt-latest
+
+        steps:
+        - uses: actions/checkout@v1
+        - name: docker-compose config
+        run: docker-compose config
