--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -11,7 +11,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag ${DOCKER_IMAGE_NAME}
+      env:
+        - DOCKER_IMAGE_NAME: "mcano/docker:intro"
     - name: docker-compose config
       run: docker-compose config
 
