@jmarcos-cano - adds login

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,11 +12,13 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build the Docker image
       run: |
+        docker login -u $DOCKER_USER -p "${secrets.DOCKER_PASSWORD}"
         echo "BUILDING => ${DOCKER_IMAGE_NAME}"
         docker build . --file Dockerfile --tag ${DOCKER_IMAGE_NAME}
-
       env:
         DOCKER_IMAGE_NAME: "mcano/docker:intro"
+        DOCKER_USER: mcano
+
     - name: docker-compose config
       run: docker-compose config
 
