--- a/docker-compose.simple.yml
+++ b/docker-compose.simple.yml
@@ -7,7 +7,7 @@ services:
       - FOO=${FOO:-BAR}
     ports:
       - target: 5000
-        published: 5000
+        published: ${HTTP_PORT:-5000}
     networks:
       - skynet
 
