--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - FOO=${FOO:-BAR}
     ports:
       - target: 5000
-        published: 5000
+        published: ${HTTP_PORT:-5000}
     networks:
       - skynet
     # adds self-healing availability
